# bisector

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: loop.rs  manual.rs
src/: error.rs  lib.rs
src/tests/: bisect.rs  bisect_complex.rs  external_program.rs  indices.rs  mod.rs  try_bisect.rs
