[package]
name = "bisector"
version = "0.4.0"
edition = "2018"

authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Flexible bisect implementatation which allows the use the bisection method on arbitrary data types"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/foresterre/bisector"

exclude = ["/.github"]

[package.metadata]
msrv = "1.37"

[dependencies]

[dev-dependencies]
yare = "1.0.1"
semver = "1"

[features]
testing_external_program_ewc = []
